# nexttech

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build-and-test.yml
src/nexttech/: migrate.py  settings.py  task1.py  task2.py
src/nexttech/db/: __init__.py  dynamo.py  error.py  feature.py  mongo.py  variation.py
tests/db/: test_mongo.py
