[tool.poetry]
name = "nexttech"
version = "0.1.0"
description = ""
authors = ["rosesyrett <rose.syrett@ly.st>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34"
pydantic = "^2.6.4"
pymongo = "^4.6.3"
pydantic-settings = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
