[tool.poetry]
name = "nexttech"
version = "0.1.0"
description = ""
authors = ["rosesyrett <rose.syrett@ly.st>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34"
pydantic = "^2.6.4"
pymongo = "^4.6.3"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.5"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
mock = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]